##Text encoding: utf-8

2009-07-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-client.h: add methods for interline and justification
	changes notifications.
	* libs/gccv/text.cc: manage interline and fix various issues.
	* libs/gccv/text.h: ditto.
	* libs/gcp/text.cc: make interline and justification persistents.
	* libs/gcp/text.h: ditto.
	* plugins/paint/text/texttool.cc: add shortcuts to change justification
	and interline.

2009-07-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: removed interline property from NewLineTag.
	* libs/gccv/text-tag.h: ditto.
	* libs/gccv/text.cc: add an interline property to Text.
	* libs/gccv/text.h: ditto.
	* libs/gcp/atom.cc: set the colors to the text, not the underlying
	rectangle.
	* libs/gcp/text.cc: load/save multiline text.

2009-07-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystaldoc.cc: load space group from cif files.
	* libs/gcu/crystaldoc.h: use gcu::SpaceGroup instead of OpenBabel.
	* libs/gcu/document.h: add virtual GetGtkWindow().
	* libs/gcu/objprops.h: add space group property.
	* libs/gcu/spacegroup.cc: fix initialization in Find() and initial matrix
	value in AddTransform().
	* libs/gcu/transform3d.cc: call Normalize() when needed.
	* plugins/loaders/cif/cif.cc: load space group.

2009-07-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: fixed a compiler warning.
	* libs/gcu/crystaldoc.cc: load chemical names from cif files.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/document.h: made SetTitle virtual.
	* libs/gcu/objprops.h: add properties for chemical names in cif files.
	* plugins/loaders/cif/cif.cc: load names and manage keywords.
	* programs/crystal/application.cc: update document title for cif files.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2009-07-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: fixed a stoichiometric coefficient issue.