@@ -1,5 +1,11 @@
 ##Text encoding: utf-8
 
+2009-07-25  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gccv/structs.h: add an enum for text decoration type.
+	* libs/gccv/text.cc: fix selection in multiline texts.
+	* libs/gcp/text.cc: fix text color loading.
+	* plugins/paint/text/texttool.cc: don't use duplicate accelerators.
+
 2009-07-21  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gccv/text-client.h: add methods for interline and justification
 	changes notifications.
